--- a/myntra-frontend/package.json
+++ b/myntra-frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.17",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.10.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
